--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -33,7 +33,7 @@
             "Back":"رجوع",
             "Next":"القادم",
             "Review":"مراجعة",
-            "Confirm": "أؤكد"
+            "Confirm": "تأكيد"
         }
     },
     "model":{
@@ -53,7 +53,8 @@
         "Sell": "بيع",
         "Rental": "تأجير",
         "Contact": "للتواصل معنا",
-        "description": "المنصة الأولى التي تقدم أفضل منزل الأحلام"
+        "description": "المنصة الأولى التي تقدم أفضل منزل الأحلام",
+        "coming_soon": "قريباً!"
     },
     "Oops": {
         "Page Not Found!": "لم يتم العثور على الصفحة!",
@@ -122,14 +123,14 @@
         "Our Blog":{
             "title":"المدونة",
             "description1": "اقرأ مقالات عن سوق العقارات",
-            "description2": "بالإضافة إلى النصائح والحيل حول شراء وبيع وتأجير الشقق والمنازل",
+            "description2": "بالإضافة إلى النصائح حول شراء وبيع وتأجير الشقق والمنازل",
             "description3": "أو العقارات التجارية"
         },
         "howItWorks":{
             "Its the easiest way to buy sell":"إنها أسهل طريقة لشراء أو بيع أو تأجير وحدة",
             "properties":"سكنية او تجارية !",
             "Find your perfectly":"اختر عقارك",
-            "matched property":"العقار يقدم لك 3  طرق للبحث لتختار بينهم بما يناسب احتياجاتك عملية البحث النصي",
+            "matched property":"'العقار' يقدم 3 طرق للبحث سوء بحث نصي، بحث بالاختيارات او تجربة 'العقار' الفريدة في البحث بواسطة الذكاء الاصطناعي الذي يأخذك بخطوات سهلة تتكيف مع احتياجاتك للحصول على منزل احلامك",
             "Reach ready buyers":"احصل على النتائج المطابقة",
             "looking for exactly":"مع اختيارك لأي طريقة من الطرق السابقة ستحصل على الوحدات الناتجة من بحثك و يتواصل معك  أحد مستشارينا العقاريين ليقدم لك أفضل الاقتراحات دون ادنى تكلفة. ",
             "your property":" تماما",
