--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -193,7 +193,12 @@
     },
     "setPriorities":{
         "You can remove or add up to 5 items":"يمكنك إزالة أو إضافة ما يصل إلى 5 عناصر",
-        "Set Priorities":"حدد الأولويات",
+        "Set Priorities":"حدد أولوياتك مع مستشار العقار الذكى",
+        "Set Priorities Button":"حدد أولوياتك",
+        "Description": "خطوات بسيطة صممت باحترافية وعناية بواسطة خبراء عقاريين تكفل لك التمتع بتجربة مميزة للبحث عن عقارك المناسبة، تجعلك اقرب لاحلامك، وتضع أمامك الاختيارات الأفضل للعقار الذي تبحث عنه بكل سهولة ودقة، وسوف تظهر لك النتائج بمعيار مئوي لنسبة الملائمة لاختياراتك.",
+        "Hint 1": "حدد موقعك الجغرافى ونوع الوحدة",
+        "Hint 2": "في 3 خطوات متتابعة, حدد أولوياتك",
+        "choose compound": "للبحث عن كمبوند أضغط هنا!",
         "Home":"الرئيسية",
         "Buy a home":"شراء منزل",
         "Set your priorities and drag and drop them from left to right":"حدد أولوياتك واختارها من اليسار إلى اليمين",
@@ -303,7 +308,10 @@
         "ar Priority":"حدد خيارات الاولولية ",
         "Choose Options": "أو حدد الخيارات",
         "Choose Keywords":"أو ابحث بكلمات مفتاحية",
-        "Placeholder": "المدينة أو الحي أو الكمبوندات"
+        "Placeholder": "المدينة أو الحي أو الكمبوندات",
+        "Text search": "بحث نصي",
+        "Attributes search": "بحث بالمتغيرات"
+
     },
     "propertyDetails":{
         "All images":"كل الصور",
@@ -315,6 +323,8 @@
         "Assign to evaluator":"إرسال الي المقييم",
         "Request a visit":"اطلب زيارة",
         "EGP":"جنيه",
+        "From": "تبدأ من",
+        "Max Price": "إلى",
         "results match your choices by":"بناءً على الأولويات المحددة ، ستطابق نتائجك اختياراتك بنسبة ",
         "Results Accuracy": "دقة النتائج",
         "Show more":"عرض المزيد"
@@ -395,6 +405,8 @@
     "current_language":"ع",
     "no_results":"لا يوجد نتائج بحث",
     "no_results_text":"لم يتم الوصول لما تبحث إليه, حاول مرة أخري",
+    "loading": "جاري البحث...",
+    "loading_text": "من فضلك انتظر بينما يتم تحميل النتائج.",
     "no_notification":"ليس لديك أي إشعارات",
     "sell_rent":"للبيع / للإيجار",
     "rooms":"الغرف",
