--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -150,7 +150,14 @@
             "View":"زيارة"
         },
         "no blogs":"لايوجد مدونات.",
-        "start_date": "تاريخ البدء: "
+        "start_date": "تاريخ البدء: ",
+        "view": "للاطلاع على كامل وحدات المشروع",
+        "form": "يسعدنا مساعدتك وتقديم المزيد من المعلومات عن المشروع وتفاصيل الوحدات. برجاء ترك بياناتك وسوف يتم التواصل معاك في أقرب وقت.",
+        "success": "نجاح!",
+        "success_message": "تم تقديم استمارتك بنجاح. سنحاول الاتصال بك في أقرب وقت ممكن.",
+        "fail": "فشل!",
+        "fail_message": "لسوء الحظ ، حدث خطأ. يرجى محاولة إرسال النموذج مرة أخرى." 
+    
     },
     "aboutus":{
         "title":"عنا",
