Home Page Update

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -8,6 +8,10 @@
         "about_us": "عنا",
         "contact_us": "اتصل بنا",
         "Notifications":"الإشعارات",
+        "Buy": "شراء",
+        "Rent": "تأجير",
+        "Commercial": "تجاري",
+        "Add property": "أضف وحدة",
         "Profile":{
             "edit":"تعديل الملف ",
             "Favorites": "المفضلة",
@@ -113,6 +117,10 @@
             "title":"أضيف حديثا",
             "listed_on": "علي قائمة: "
         },
+        "Featured Units": {
+            "title": "الوحدات المميزة",
+            "listed_on": "علي قائمة: "
+        },
         "Download app": {
             "title":"تحميل تطبيق العقار",
             "description":"أستخدم منصة العقار  أو قم بتحميل التطبيق للحصول على تحديثات سريعة على ممتلكاتك وطلباتك العقارية ! متاح لأجهزة Android و iOS"
@@ -141,7 +149,11 @@
             "Complete your deal":"أكمل صفقتك",
             "with the lowest":"بأقل تكلفة",
             "cost & effort":"وجهد"
-        }
+        },
+        "top_searched_areas": "أهم المناطق التي تم البحث عنها",
+        "top_developers": "كبار المطورين",
+        "share_your_quests": "شارك المهام الخاصة بك",
+        "share_your_quests_description": "محرك بحث 'العقار' مصمم بالذكاء الاصطناعي يأخذك بخطوات سهلة وبسيطة لتحديد احتياجاتك بدقة ، وهذه هي الطريقة الأكثر دقة وفعالية للحصول على عقارك المثالي."
     },
     "blog":{
         "title":"المدونة",
@@ -409,12 +421,14 @@
     "solution_text":"العقار، هو اول محرك بحث مدعم بواسطة الذكاء الاصطناعي، ليجد لك افضل الخيارات المتاحة من العقارات للغرض الذي يناسب احتياجاتك، مما يوفر الكثير من الوقت والمجهود وعناء البحث، وايضا عمولات الشراء للوسطاء العقاريين، اما اذا كنت صاحب عقار يوفر لك العقار  المشتري المناسب مما يسهل من عملية البيع ويوفر الوقت والمجهود.",
     "try_solution":"جرب حل العقار",
     "search_button":"بحث سريع",
+    "quest_button": "شارك المهام الخاصة بك",
     "electronic_consultant":"جربه الآن",
     "advisor_description1": "جرب",
     "advisor_description2": " بحث العقار بالذكاء الاصطناعي,",
     "advisor_description3": " بخطوات سهلة وبسيطة ستحصل على عقارك المثالي.",
     "advisor_description": "تم إنشاء محرك بحث 'العقار' بالذكاء الاصطناعي الذي يرشدك عبر خطوات سهلة وبسيطة لتحديد متطلباتك بدقة ، وهذا هو النهج الأكثر دقة وفعالية للعثور على عقارك المثالي",
     "sign_up":"إنشاء حساب",
+    "language": "ENGLISH", 
     "current_language":"ع",
     "no_results":"لا يوجد نتائج بحث",
     "no_results_text":"لم يتم الوصول لما تبحث إليه, حاول مرة أخري",
