Update sell journey

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -99,6 +99,7 @@
         "Location": "الموقع",
         "Compound": "مُجَمَّع",
         "Real estate type":"نوع العقار",
+        "Propose": "عرض",
         "Price range":"متوسط السعر",
         "Price range hint": "السعر الأدنى في هذه المنطقة: ",
         "Select Area":"اختار المنطقة",
@@ -293,6 +294,9 @@
         "no notifications":"لاتوجد إشعارات."
     },
     "sell": {
+        "location": "حدد موقعك الجغرافي",
+        "type": "حدد نوع العقار والسعر",
+        "hint": "حدد موقعك الجغرافي ونوع الملكية والسعر",
         "options": "خيارات",
         "sub": {
             "Home": "الرئيسية",
