--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -11,6 +11,7 @@
         "Buy": "شراء",
         "Rent": "تأجير",
         "Commercial": "تجاري",
+        "Developers": "المطورين",
         "Add property": "أضف وحدة",
         "Profile":{
             "edit":"تعديل الملف ",
@@ -38,7 +39,8 @@
             "Next":"القادم",
             "Review":"مراجعة",
             "Confirm": "تأكيد",
-            "Terms": "اقرأ الشروط والأحكام"
+            "Terms": "اقرأ الشروط والأحكام",
+            "Back to main search": "العودة إلى البحث الرئيسي"
         }
     },
     "model":{
@@ -68,10 +70,20 @@
     "error":{
         "someThing went Wrong":"حدث خطأ ما. يرجي المحاولة مرة اخرى أو الاتصال بالمسؤول إذا استمرت المشكلة",
         "session expired, please login again to continue":"انتهت الجلسة، من فضلك سجل دخولك للمتابعة",
-        "login to continue":"للاستمرار من فضلك سجل دخلولك!"
+        "login to continue":"للاستمرار من فضلك سجل دخلولك!",
+        "developer": "لا يمكن اتخاذ هذا الإجراء لأنك قمت بتسجيل الدخول كمطور!",
+        "developer_user": "لا يمكن اتخاذ هذا الإجراء لأنك قمت بتسجيل الدخول كمستخدم!",
+        "developer_registration": "جميع بيانات شركتك مطلوبة!",
+        "addProject": "جميع بيانات مشروعك مطلوبة!",
+        "addUnit": "جميع بيانات وحدتك مطلوبة!",
+        "addUnit area": "الرجاء اختيار مدينة بها منطقة متاحة!",
+        "location": "يرجى التأكد من تحديد موقعك.",
+        "choose_priority": "يرجى التأكد من تحديد أولوية واحدة على الأقل.",
+        "set_priority": "يرجى التأكد من تعيين جميع الأولويات المختارة."
     },
     "success":{
-        "Your message has been sent successfully!":"تم ارسال رسالتك بنجاح !"
+        "Your message has been sent successfully!":"تم ارسال رسالتك بنجاح !",
+        "Project added successfully": "تمت إضافة المشروع بنجاح!"
     },
     "validation":{
         "This Filed Is Required!":"هذا الحقل مطلوب!"
@@ -156,6 +168,36 @@
         "share_your_quests": "شارك المهام الخاصة بك",
         "share_your_quests_description": "محرك بحث 'العقار' مصمم بالذكاء الاصطناعي يأخذك بخطوات سهلة وبسيطة لتحديد احتياجاتك بدقة ، وهذه هي الطريقة الأكثر دقة وفعالية للحصول على عقارك المثالي."
     },
+    "quest":{
+        "title":"شارك متطلباتك!",
+        "route": "طلب",
+        "basic_data": "تفاصيل أساسية",
+        "Buy": "شراء",
+        "Rent": "تأجير",
+        "Residential": "سكني",
+        "Commercial": "تجاري",
+        "Location Details": "تفاصيل الموقع",
+        "Your Details": "التفاصيل الخاصة بك",
+        "looking" : "تبحث عن عقار ل",
+        "property" : "اختر نوع العقار",
+        "location": "اختر الموقع الجغرافي المطلوب",
+        "price": "اختر السعر المطلوب",
+        "City": "مدينة",
+        "Area": "منطقة",
+        "Price": "سعر",
+        "name": "الاسم الكامل",
+        "Mobile Number": "رقم الهاتف المحمول",
+        "Min": "اقل",
+        "Max": "أقصى",
+        "Min Price": "0 جنيه",
+        "Max Price": "100,000,000 جنيه"
+
+    },
+    "alert":{
+        "failed": "فشل",
+        "ok": "موافقة",
+        "fields": "يرجى التأكد من ملء جميع الحقول." 
+     },
     "blog":{
         "title":"المدونة",
         "sub":{
@@ -219,7 +261,8 @@
         "Description": "خطوات بسيطة صممت باحترافية وعناية بواسطة خبراء عقاريين تكفل لك التمتع بتجربة مميزة للبحث عن عقارك المناسبة، تجعلك اقرب لاحلامك، وتضع أمامك الاختيارات الأفضل للعقار الذي تبحث عنه بكل سهولة ودقة، وسوف تظهر لك النتائج بمعيار مئوي لنسبة الملائمة لاختياراتك.",
         "Hint 1": "حدد موقعك الجغرافى ونوع الوحدة",
         "Hint 2": "في 3 خطوات متتابعة, حدد أولوياتك",
-        "choose compound": "للبحث عن كمبوند أضغط هنا!",
+        "choose compound": "للبحث عن كمبوند، أضغط هنا!",
+        "select compound": "لتحديد كمبوند، أضغط هنا!",
         "Home":"الرئيسية",
         "Buy a home":"شراء منزل",
         "Set your priorities and drag and drop them from left to right":"حدد أولوياتك واختارها من اليسار إلى اليمين",
@@ -332,7 +375,7 @@
         "ar Priority":"حدد خيارات الاولولية ",
         "Choose Options": "أو حدد الخيارات",
         "Choose Keywords":"أو ابحث بكلمات مفتاحية",
-        "Placeholder": "المدينة أو الحي أو الكمبوندات",
+        "Placeholder": "المدينة أو الحي أو الكمباوند",
         "Text search": "بحث نصي",
         "Attributes search": "بحث بالمتغيرات",
         "fail": "!نأسف",
@@ -404,7 +447,12 @@
         "and":"و",
         "Privacy policy":"سياسة الاستخدام للموقع",
         "Login":"دخول",
-        "email": "البريد الإلكتروني"
+        "email": "البريد الإلكتروني",
+        "Company Name EN": "اسم الشركة (إنجليزي)",
+        "Company Name AR": "اسم الشركة (عربي)",
+        "Website": "موقع إلكتروني",
+        "Company Location": "موقع الشركة",
+        "Description": "وصف"
     },
     "howItWorks":{
         "How it works":"كيف يعمل",
@@ -415,6 +463,50 @@
     "search":{
         "title":"نتائج البحث",
         "count":"وحدة"
+    },
+    "developer":{
+        "Im a developer": "أنا مطور",
+        "companies": "شركة",
+        "Projects_header": "مشروع",
+        "Projects": "مشاريع",
+        "Overview": "نظرة عامة",
+        "addProject": "أضف مشروع جديد",
+        "addUnit": "أضف وحدة جديدة",
+        "Units_header": "وحدة",
+        "Units": "الوحدات",
+        "description": "وصف",
+        "masterplan": "مخطط رئيسي",
+        "project_name_en": "اسم المشروع (انجليزي)",
+        "project_name_ar": "اسم المشروع (عربي)",
+        "address": "عنوان",
+        "upload_photos": "ارفع صور المشروع",
+        "upload_masterplan": "ارفع المخطط الرئيسي",
+        "upload_logo": "ارفع شعار المشروع",
+        "button": "أضف",
+        "upload_unit_photos": "ارفع صور الوحدة",
+        "upload_unit_masterplan": "ارفع المخططات الرئيسية للوحدة",
+        "no description": "لم يتم العثور على وصف.",
+        "no projects": "لم يتم العثور على مشاريع.",
+        "no units": "لم يتم العثور على وحدات.",
+        "developer no projects1": "ليس لديك أي مشاريع.",
+        "developer no projects2": "ضع قائمة بمشاريعك وأضف وحداتها لعرضها.",
+        "developer no units1": "ليس لديك أي وحدات.",
+        "developer no units2": "ضع قائمة بوحداتك وأضف مواصفاتها لعرضها."
+
+    },
+    "advisor":{
+        "title": "المستشار الإلكتروني",
+        "description": "الخطوات البسيطة التي صممها خبراء العقارات لضمان الحصول على الممتلكات المناسبة ، وسيتم عرض النتائج لك بنتيجة صلة. ستستغرق هذه الرحلة حوالي 4-7 دقائق.",
+        "journey": "ستكون الرحلة في 3 خطوات متتالية ، بناءً على أهمية أولوياتك.",
+        "priority_description": "في الخطوات التالية ستقوم بترتيب اولوياتك في البحث عن عقارك على مرحلتين من حيث الاهمية  المرحلة الأولى وهى الأهمية الأعلى المرحلة الثانية وهى الأهمية الاقل.",
+        "choose_top_priority": "اختر أهم أولوياتك في اختيار عقار من القائمة أدناه.",
+        "choose_low_priority": "اختر أولوياتك المنخفضة في اختيار عقار من القائمة أدناه.",
+        "set_top_priority": "حدد أعلى أولوياتك.",
+        "set_low_priority": "حدد أولوياتك المنخفضة.",
+        "location": "الرجاء تحديد موقعك.",
+        "price": "الرجاء تحديد النطاق السعري الخاص بك.",
+        "min": "الحد الأدنى",
+        "max": "الحد الأقصى"
     },
     "no_visits":"ستظهر هنا الزيارات التي أكملتها مع مستشارينا.",
     "finding_property":"البحث عن الممتلكات المطابقة الخاصة بك",
