--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -376,6 +376,9 @@
         "Choose Options": "أو حدد الخيارات",
         "Choose Keywords":"أو ابحث بكلمات مفتاحية",
         "Placeholder": "المدينة أو الحي أو الكمباوند",
+        "Placeholder Buy": "اشترى في مدينة، حي أو كمبوندات",
+        "Placeholder Rent": "استأجر في مدينة، حي أو كمبوندات",
+        "Placeholder Commercial": "تجاري في مدينة، حي أو كمبوندات",
         "Text search": "بحث نصي",
         "Attributes search": "بحث بالمتغيرات",
         "fail": "!نأسف",
