--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -547,5 +547,8 @@
     "space":"Space",
     "egypt":"Egypt",
     "saudi":"Saudi Arabia",
-    "coming_soon":"Coming soon"
+    "coming_soon":"Coming soon",
+    "how it works": "how it works",
+    "electronic advisor": "electronic advisor",
+    "mobile app": "mobile app"
 }
